[gd_scene load_steps=30 format=2]

[ext_resource path="res://Assets/Pause/Background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Pause/VoltarAoJogo1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Pause/TelaCheiaDesativado1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Pause/SomDesativado1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Pause/SomDesativado2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Pause/TelaCheiaDesativado2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Pause/Sair2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Pause/Background2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Pause/VoltarAoJogo2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Pause/SomAtivado1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Pause/SomAtivado2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Pause/TelaCheiaAtivado1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Pause/Voltar2.png" type="Texture" id=13]
[ext_resource path="res://Assets/Pause/Sair1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Pause/TelaCheiaAtivado2.png" type="Texture" id=15]
[ext_resource path="res://Assets/Pause/Voltar1.png" type="Texture" id=16]
[ext_resource path="res://Assets/Fontes/AGoblinAppears-o2aV.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=18]
[ext_resource path="res://Assets/Pause/Opcoes2.png" type="Texture" id=19]
[ext_resource path="res://Assets/Pause/Opcoes1.png" type="Texture" id=20]
[ext_resource path="res://Assets/Pause/Facil2.png" type="Texture" id=21]
[ext_resource path="res://Assets/Pause/Facil1.png" type="Texture" id=22]
[ext_resource path="res://Assets/Pause/Padrao2.png" type="Texture" id=23]
[ext_resource path="res://Assets/Pause/Padrao.png" type="Texture" id=24]
[ext_resource path="res://Assets/Pause/Padrao3.png" type="Texture" id=25]
[ext_resource path="res://Assets/Pause/Padrao4.png" type="Texture" id=26]
[ext_resource path="res://Assets/Pause/Facil3.png" type="Texture" id=27]
[ext_resource path="res://Assets/Pause/Facil4.png" type="Texture" id=28]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 17 )

[node name="PauseMenu" type="CanvasLayer"]
layer = 100

[node name="Pause" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Pause"]
position = Vector2( 491.595, 178.681 )
scale = Vector2( 0.734073, 0.700357 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Pause"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inicio" type="Control" parent="Pause"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoltarAoJogo" type="TextureButton" parent="Pause/Inicio"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 328.26
margin_top = 251.361
margin_right = 1209.26
margin_bottom = 340.361
rect_rotation = -1.85236
rect_scale = Vector2( 0.45, 0.45 )
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BOpcoes" type="TextureButton" parent="Pause/Inicio"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 337.785
margin_top = 321.688
margin_right = 1218.78
margin_bottom = 410.688
rect_rotation = -1.85236
rect_scale = Vector2( 0.45, 0.45 )
texture_normal = ExtResource( 20 )
texture_hover = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sair" type="TextureButton" parent="Pause/Inicio"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 332.311
margin_top = 383.686
margin_right = 1213.31
margin_bottom = 472.686
rect_rotation = -1.9
rect_scale = Vector2( 0.45, 0.45 )
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirmacao" type="Control" parent="Pause"]
visible = false
margin_left = 491.595
margin_top = 178.681
margin_right = 531.595
margin_bottom = 218.681
rect_scale = Vector2( 0.734, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Pause/Confirmacao"]
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Pause/Confirmacao"]
margin_left = -167.511
margin_top = 93.1646
margin_right = 321.489
margin_bottom = 255.165
rect_rotation = -1.9
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.74902, 0.611765, 0.192157, 1 )
text = "Tem certeza que
deseja sair?

Nenhum progesso
ser√° salvo!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltar" type="TextureButton" parent="Pause/Confirmacao"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.877
margin_top = 263.0
margin_right = 782.123
margin_bottom = 352.0
rect_rotation = -1.9
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 16 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sair2" type="TextureButton" parent="Pause/Confirmacao"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.72
margin_top = 326.225
margin_right = 700.28
margin_bottom = 415.225
rect_rotation = -1.9
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opcoes" type="Control" parent="Pause"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FacilDesativado" type="TextureButton" parent="Pause/Opcoes"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 333.798
margin_top = 247.186
margin_right = 889.798
margin_bottom = 343.186
rect_rotation = -1.9
rect_scale = Vector2( 0.27, 0.27 )
texture_normal = ExtResource( 22 )
texture_hover = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FacilAtivado" type="TextureButton" parent="Pause/Opcoes"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 333.798
margin_top = 247.186
margin_right = 889.798
margin_bottom = 343.186
rect_rotation = -1.9
rect_scale = Vector2( 0.27, 0.27 )
texture_normal = ExtResource( 27 )
texture_hover = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PadraoDesativado" type="TextureButton" parent="Pause/Opcoes"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 498.026
margin_top = 242.322
margin_right = 1210.03
margin_bottom = 338.322
rect_rotation = -1.9
rect_scale = Vector2( 0.27, 0.27 )
texture_normal = ExtResource( 24 )
texture_hover = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PadraoAtivado" type="TextureButton" parent="Pause/Opcoes"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 498.025
margin_top = 242.322
margin_right = 1210.03
margin_bottom = 338.322
rect_rotation = -1.9
rect_scale = Vector2( 0.27, 0.27 )
texture_normal = ExtResource( 25 )
texture_hover = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SomAtivado" type="TextureButton" parent="Pause/Opcoes"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 349.552
margin_top = 297.794
margin_right = 1230.55
margin_bottom = 386.794
rect_rotation = -1.9
rect_scale = Vector2( 0.32, 0.32 )
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SomDesativado" type="TextureButton" parent="Pause/Opcoes"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 349.552
margin_top = 297.794
margin_right = 1230.55
margin_bottom = 386.794
rect_rotation = -1.9
rect_scale = Vector2( 0.32, 0.32 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TelaCheiaDesativado" type="TextureButton" parent="Pause/Opcoes"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 378.797
margin_top = 337.521
margin_right = 1259.8
margin_bottom = 426.521
rect_rotation = -1.9
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TelaCheiaAtivado" type="TextureButton" parent="Pause/Opcoes"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 378.798
margin_top = 337.521
margin_right = 1259.8
margin_bottom = 426.521
rect_rotation = -1.9
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltar2" type="TextureButton" parent="Pause/Opcoes"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 420.404
margin_top = 381.921
margin_right = 1301.4
margin_bottom = 470.921
rect_rotation = -1.9
rect_scale = Vector2( 0.35, 0.35 )
texture_normal = ExtResource( 16 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Pause/Inicio/VoltarAoJogo" to="Pause" method="_on_VoltarAoJogo_pressed"]
[connection signal="pressed" from="Pause/Inicio/BOpcoes" to="Pause" method="_on_BOpcoes_pressed"]
[connection signal="pressed" from="Pause/Inicio/Sair" to="Pause" method="_on_Sair_pressed"]
[connection signal="pressed" from="Pause/Confirmacao/Voltar" to="Pause" method="_on_Voltar_pressed"]
[connection signal="pressed" from="Pause/Confirmacao/Sair2" to="Pause" method="_on_Sair2_pressed"]
[connection signal="pressed" from="Pause/Opcoes/FacilDesativado" to="Pause" method="_on_FacilDesativado_pressed"]
[connection signal="pressed" from="Pause/Opcoes/FacilAtivado" to="Pause" method="_on_FacilAtivado_pressed"]
[connection signal="pressed" from="Pause/Opcoes/PadraoDesativado" to="Pause" method="_on_PadraoDesativado_pressed"]
[connection signal="pressed" from="Pause/Opcoes/PadraoAtivado" to="Pause" method="_on_PadraoAtivado_pressed"]
[connection signal="pressed" from="Pause/Opcoes/SomAtivado" to="Pause" method="_on_SomAtivado_pressed"]
[connection signal="pressed" from="Pause/Opcoes/SomDesativado" to="Pause" method="_on_SomDesativado_pressed"]
[connection signal="pressed" from="Pause/Opcoes/TelaCheiaDesativado" to="Pause" method="_on_TelaCheiaDesativado_pressed"]
[connection signal="pressed" from="Pause/Opcoes/TelaCheiaAtivado" to="Pause" method="_on_TelaCheiaAtivado_pressed"]
[connection signal="pressed" from="Pause/Opcoes/Voltar2" to="Pause" method="_on_Voltar2_pressed"]
